Actualizacion de subtitulo

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -4,7 +4,7 @@
 
 #XTIT: Application name
 appTitle=Aprobaci\u00f3n de \u00f3rdenes de compra
-
+subTitle=Ordenes de Compra
 #YDES: Application description
 appDescription=Aprobaci\u00f3n de \u00f3rdenes de compra
 #XTIT: Main view title
