--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -80,7 +80,7 @@ view.PurchaseOrder.quantity=Cantidad
 view.PurchaseOrder.itemCategory=Categor\u00EDa de art\u00EDculo
 
 #XTIT: Header text of Master List
-view.Master.title=\u00D3rdenes de compra ({0})
+view.Master.title=\u00D3rdenes de compra
 
 #XFLD: 
 view.PurchaseOrder.priceDetails=Detalles de precios
@@ -152,7 +152,7 @@ view.PurchaseOrder.serviceLineIdLabel=Servicio
 view.PurchaseOrder.DeliveryAlsoLater=y posteriores
 
 #XFLD: Multiple items
-view.PurchaseOrder.multipleItems=Posiciones ({0})
+view.PurchaseOrder.multipleItems=Posiciones
 
 #XFLD: Multiple Service Lines
 view.PurchaseOrder.multipleLines=L\u00EDneas de servicio ({0})
